feat: add create account flag at query time
