# core-library/pkg/generated/workspace_service/v1/apidocs.swagger.json
@@ -125,6 +125,12 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "createIfNotExists",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
           }
         ],
         "tags": [
